* Added size reporting to both static and embedded resource kinds. * Fixed issue with horizontal scrollbars appearing on resource index pages.
git-svn-id: svn://gearedstudios.com/serenity@192 7c140d53-a5f7-2844-acf0-7413b3fec49d

--- a/SerenityWeb/Trunk/Serenity/Resources/index.css
+++ b/SerenityWeb/Trunk/Serenity/Resources/index.css
@@ -3,13 +3,15 @@ body
 	background-color: #FDFEFF;
 	color: #1F1F1F;
 	font-family: "Trebuchet MS", Trebuchet, Arial, sans;
-	font-size: 86%;
+	font-size: 10pt;
 	margin-right: 8px;
+	min-height: 600px;
+	min-width: 800px;
 }
 a
 {
 	text-decoration: none;
-	border-bottom: 1px dotted;
+	border-bottom: 1px solid;
 	color: #205020;
 }
 a.Sort
@@ -23,19 +25,23 @@ a:hover
 }
 table
 {
-	width: 100%;
+    width: 95%;
 }
 td, th
 {
 	text-align: left;
 	padding-top: 2px;
 	padding-bottom: 2px;
-	border-bottom: 1px dotted;
-	border-right: 1px dotted;
+	border-bottom: 1px solid #DFDFDF;
+	border-right: 1px solid #DFDFDF;
 }
 .icon
 {
-	width: 20px;
+	width: 18px;
+}
+.name
+{
+    width: auto;
 }
 .size
 {
@@ -43,11 +49,11 @@ td, th
 }
 .description
 {
-	width: auto;
+	width: 192px;
 }
 .timestamp
 {
-	width: auto;
+	width: 128px;
 }
 .group
 {
